--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4.0.0
 
       - name: Run Script
-        run: sudo ./script/main.sh
+        run: sudo chmod +x ./script/main.sh && sudo ./script/main.sh
 
       - name: Preparing commit title
         id: date
