--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4.0.0
 
       - name: Run Script
-        run: sudo chmod +x ./script/main.sh && sudo ./script/main.sh
+        run: sudo chmod +x ./scripts/main.sh && sudo ./scripts/main.sh
 
       - name: Preparing commit title
         id: date
@@ -42,7 +42,6 @@ jobs:
       - name: Add & Commit to repo
         uses: EndBug/add-and-commit@v9.1.3
         with:
-          add: '["*.html --force", "*.css --force"]'
           cwd: './'
           default_author: github_actions
           message: ${{ steps.date.outputs.date }}
