--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Preparing commit title
         id: date
-        run: echo "::set-output name=date::$(date +'%Y%m%d')"
+        run: echo "date=$(date +'%Y%m%d')" >> $GITHUB_OUTPUT
       
       - name: Add & Commit to repo
         uses: EndBug/add-and-commit@v9.1.3
